--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -10,6 +10,7 @@
   "entity.goety.zombievillagerminion":"Zombie Villager Minion",
   "entity.goety.skeletonvillagerminion":"Skeleton Villager Minion",
   "entity.goety.envioker":"Envioker",
+  "entity.goety.huskarl":"Huskarl",
   "entity.goety.mutatedcow":"Mutated Cow",
   "entity.goety.mutatedchicken":"Mutated Chicken",
   "entity.goety.mutatedsheep":"Mutated Sheep",
@@ -42,6 +43,7 @@
   "item.goety.zealot_spawn_egg": "Zealot Spawn Egg",
   "item.goety.disciple_spawn_egg": "Disciple Spawn Egg",
   "item.goety.apostle_spawn_egg": "Apostle Spawn Egg",
+  "item.goety.huskarl_spawn_egg": "Huskarl Spawn Egg",
   "item.goety.sacredfish_spawn_egg": "Golden King Spawn Egg",
   "item.goety.parasite_spawn_egg": "Parasite Spawn Egg",
   "item.goety.tank_spawn_egg": "Tank Spawn Egg",
@@ -158,6 +160,7 @@
   "block.goety.mutation_totem": "Eldritch Totem Head",
   "block.goety.undead_totem": "Necrotic Totem Head",
   "block.goety.wind_totem": "Galeful Totem Head",
+  "block.goety.obelisk": "Cursed Obelisk",
   "effect.goety.cursed": "Cursed",
   "effect.goety.minorharm": "Minor Harming",
   "effect.goety.deathprotect": "Death Save",
@@ -167,6 +170,7 @@
   "effect.goety.goldtouched": "Gold Touched",
   "effect.goety.cosmic": "???",
   "effect.goety.illague": "Illague",
+  "effect.goety.necropower": "Necro Power",
   "potion.goety.mining_fatigue": "Mining Fatigue",
   "potion.goety.minorharm": "Minor Harming",
   "key.goety.category": "Goety",
