Added new crafting method. Streamlined Totem Head Blocks.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -160,7 +160,8 @@
   "block.goety.mutation_totem": "Eldritch Totem Head",
   "block.goety.undead_totem": "Necrotic Totem Head",
   "block.goety.wind_totem": "Galeful Totem Head",
-  "block.goety.obelisk": "Cursed Obelisk",
+  "block.goety.obelisk": "Dark Obelisk",
+  "block.goety.cursed_burner": "Cursed Infuser",
   "effect.goety.cursed": "Cursed",
   "effect.goety.minorharm": "Minor Harming",
   "effect.goety.deathprotect": "Death Save",
@@ -184,9 +185,20 @@
   "info.goety.soulitems.cost": "\u00A73Soul Cost: %d\u00A73",
   "info.goety.soulitems.focus": "\u00A7dFocus:\u00A7d %d",
   "info.goety.soulitems.focuscost": "\u00A7bOriginal Cost: %d\u00A7b",
-  "info.goety.protector.leave": "'s time with you is up!",
-  "info.goety.protector.death": " couldn't stay alive any longer...",
-  "info.goety.protector.fired": " has been release from duty!",
   "container.goety.soulforge": "Soul Forge",
-  "enchantment.goety.souleater": "Soul Eater"
+  "enchantment.goety.souleater": "Soul Eater",
+  "advancements.goety.root.title": "Goety",
+  "advancements.goety.root.description": "Get started on your journey",
+  "advancements.goety.crafttotem.title": "Make Your Own",
+  "advancements.goety.crafttotem.description": "Craft a Totem of Souls",
+  "advancements.goety.craftinfuser.title": "Cursed Elements",
+  "advancements.goety.craftinfuser.description": "Put it on a Spawner to make it work.",
+  "advancements.goety.craftcursedingot.title": "Profaned Metal",
+  "advancements.goety.craftcursedingot.description": "Seems to be what Spawners are made of.",
+  "advancements.goety.craftemptycore.title": "What Is This, Thaumcraft?",
+  "advancements.goety.craftemptycore.description": "Maybe make a Wand first before anything else.",
+  "advancements.goety.craftsoulwand.title": "Oh, The Pointing Again.",
+  "advancements.goety.craftsoulwand.description": "What are you going to do? Assemble a cabinet at them?",
+  "gui.jei.category.cursed_burner": "Cursed Infuser",
+  "gui.jei.category.cursed_burner.time": "%ss"
 }
