Cleaned up Cultist codes. Add new Loot tables and trying to learn more on structural generating.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -94,6 +94,10 @@
   "item.goety.arachnoarmoredhelm": "Araneae Battle Helm",
   "item.goety.arachnoarmoredrobe": "Araneae Battle Robe",
   "item.goety.arachnobootsofwander": "Araneae Boots of Wander",
+  "item.goety.cultisthelm": "Cultist Helm",
+  "item.goety.cultistrobe": "Cultist Robe",
+  "item.goety.cultistarmoredhelm": "Cultist Battle Helm",
+  "item.goety.cultistarmoredrobe": "Cultist Battle Robe",
   "item.goety.warped_spear": "Warped Spear",
   "item.goety.wooden_spear": "Wooden Spear",
   "item.goety.stone_spear": "Stone Spear",
@@ -137,15 +141,8 @@
   "item.goety.mutatedrabbit_uncooked": "Mutated Raw Rabbit",
   "item.goety.darkfabric": "Dark Fabric",
   "item.goety.magicfabric": "Magic Fabric",
+  "item.goety.darkbook": "Liber Barathrum",
   "item.goety.deadbat": "Carrion Bat",
-  "item.minecraft.tipped_arrow.effect.mining_fatigue": "Arrow of Heavy Arms",
-  "item.minecraft.tipped_arrow.effect.minorharm": "Arrow of Minor Harming",
-  "item.minecraft.potion.effect.mining_fatigue": "Potion of Heavy Arms",
-  "item.minecraft.potion.effect.minorharm": "Potion of Minor Harming",
-  "item.minecraft.splash_potion.effect.mining_fatigue": "Splash Potion of Heavy Arms",
-  "item.minecraft.splash_potion.effect.minorharm": "Splash Potion of Minor Harming",
-  "item.minecraft.lingering_potion.effect.mining_fatigue": "Lingering Potion of Heavy Arms",
-  "item.minecraft.lingering_potion.effect.minorharm": "Lingering Potion of Minor Harming",
   "block.goety.blazecoreblock": "Tank Core",
   "block.goety.cursed_block": "Block of Cursed Metal",
   "block.goety.cursed_stone": "Cursed Stone",
@@ -167,9 +164,9 @@
   "block.goety.undead_totem": "Necrotic Totem Head",
   "block.goety.wind_totem": "Galeful Totem Head",
   "block.goety.obelisk": "Dark Obelisk",
+  "block.goety.guardian_obelisk": "Guarding Obelisk",
   "block.goety.cursed_burner": "Cursed Infuser",
   "effect.goety.cursed": "Cursed",
-  "effect.goety.minorharm": "Minor Harming",
   "effect.goety.deathprotect": "Death Save",
   "effect.goety.souldrain": "Soul Drain",
   "effect.goety.summondown": "Summon Down",
@@ -179,8 +176,7 @@
   "effect.goety.illague": "Illague",
   "effect.goety.necropower": "Necro Power",
   "effect.goety.launch": "Launch",
-  "potion.goety.mining_fatigue": "Mining Fatigue",
-  "potion.goety.minorharm": "Minor Harming",
+  "effect.goety.nomine": "Tfarcenim",
   "key.goety.category": "Goety",
   "key.goety.wand": "Open Wand Focus Slot",
   "key.goety.wandandbag": "Open Bag with Wand",
@@ -197,7 +193,7 @@
   "advancements.goety.root.title": "Goety",
   "advancements.goety.root.description": "Get started on your journey",
   "advancements.goety.crafttotem.title": "Make Your Own",
-  "advancements.goety.crafttotem.description": "Craft a Totem of Souls",
+  "advancements.goety.crafttotem.description": "Craft a Totem of Souls.",
   "advancements.goety.craftinfuser.title": "Cursed Elements",
   "advancements.goety.craftinfuser.description": "Put it on a Spawner to make it work.",
   "advancements.goety.craftcursedingot.title": "Profaned Metal",
@@ -206,12 +202,24 @@
   "advancements.goety.craftemptycore.description": "Maybe make a Wand first before anything else.",
   "advancements.goety.craftsoulwand.title": "Oh, The Pointing Again.",
   "advancements.goety.craftsoulwand.description": "What are you going to do? Assemble a cabinet at them?",
+  "advancements.goety.craftdarkrobe.title": "Look At Me, I'm the Evoker Now",
+  "advancements.goety.craftdarkrobe.description": "Dark Helms reduces Casting Time, Dark Robes reduces Soul Costs.",
+  "advancements.goety.craftvexingfocus.title": "Vex Production",
+  "advancements.goety.craftvexingfocus.description": "Look out for any Hermits outside of your windows.",
+  "advancements.goety.craftbitingfocus.title": "The Floor Is Jaws",
+  "advancements.goety.craftbitingfocus.description": "Perhaps it can be improved later on...",
+  "advancements.goety.kill_a_cultist.title": "You're An Ant Beneath My Boot!",
+  "advancements.goety.kill_a_cultist.description": "Nether Worship is hot nowadays.",
   "commands.infamy.add.success.single": "Gave %s Infamy to %s",
   "commands.infamy.add.success.multiple": "Gave %s Infamy to %s players",
   "commands.infamy.set.success.single": "Set %s Infamy on %s",
   "commands.infamy.set.success.multiple": "Set %s Infamy on %s players",
   "commands.infamy.query": "%s has %s Infamy",
   "commands.infamy.set.points.invalid": "Error for Infamy setting points",
+  "commands.summonnoai.success": "Summoned new %s with no Ai",
+  "commands.summonnoai.failed": "Unable to summon entity",
+  "commands.summonnoai.failed.uuid": "Unable to summon entity due to duplicate UUIDs",
+  "commands.summonnoai.invalidPosition": "Invalid position for summon",
   "gui.jei.category.cursed_burner": "Cursed Infuser",
   "gui.jei.category.cursed_burner.time": "%ss"
 }
