Fix Loot and Structure bugs. Added new Texture Folder for Cultists mobs.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -5,6 +5,7 @@
   "entity.goety.channeller":"Channeller",
   "entity.goety.fanatic":"Fanatic",
   "entity.goety.zealot":"Zealot",
+  "entity.goety.thug":"Thug",
   "entity.goety.disciple":"Disciple",
   "entity.goety.apostle":"Apostle",
   "entity.goety.zombievillagerminion":"Zombie Villager Minion",
@@ -34,7 +35,7 @@
   "entity.goety.penance":"Penance",
   "entity.goety.soulfireball":"Soul Fireball",
   "entity.goety.warped_spear":"Warped Spear",
-  "entity.goety.spear":"Spear",
+  "entity.goety.pitchfork":"Pitchfork",
   "entity.goety.scorchball":"Nether Meteor",
   "entity.goety.soulskull":"Soul Skull",
   "entity.goety.witchgale":"Witch's Gale",
@@ -43,6 +44,7 @@
   "item.goety.channeller_spawn_egg": "Channeller Spawn Egg",
   "item.goety.fanatic_spawn_egg": "Fanatic Spawn Egg",
   "item.goety.zealot_spawn_egg": "Zealot Spawn Egg",
+  "item.goety.thug_spawn_egg": "Thug Spawn Egg",
   "item.goety.disciple_spawn_egg": "Disciple Spawn Egg",
   "item.goety.apostle_spawn_egg": "Apostle Spawn Egg",
   "item.goety.envioker_spawn_egg": "Envioker Spawn Egg",
@@ -69,6 +71,8 @@
   "item.goety.rocketbooster": "Rocket Booster",
   "item.goety.flamegun": "Nether Blaster",
   "item.goety.soulruby": "Ruby of Souls",
+  "item.goety.magic_emerald": "Activated Emerald",
+  "item.goety.soul_emerald": "Concentrated Emerald",
   "item.goety.riftshard": "Rift Shard",
   "item.goety.philosophersstone": "Philosopher's Stone",
   "item.goety.sacred_fish": "Golden King",
@@ -99,11 +103,7 @@
   "item.goety.cultistarmoredhelm": "Cultist Battle Helm",
   "item.goety.cultistarmoredrobe": "Cultist Battle Robe",
   "item.goety.warped_spear": "Warped Spear",
-  "item.goety.wooden_spear": "Wooden Spear",
-  "item.goety.stone_spear": "Stone Spear",
-  "item.goety.iron_spear": "Iron Spear",
-  "item.goety.diamond_spear": "Diamond Spear",
-  "item.goety.netherite_spear": "Netherite Spear",
+  "item.goety.pitchfork": "Pitchfork",
   "item.goety.philosophers_mace": "Philosopher's Mace",
   "item.goety.dark_scroll": "Dark Scroll",
   "item.goety.witchbomb": "Witch's Bomb",
@@ -192,10 +192,12 @@
   "enchantment.goety.souleater": "Soul Eater",
   "advancements.goety.root.title": "Goety",
   "advancements.goety.root.description": "Get started on your journey",
-  "advancements.goety.crafttotem.title": "Make Your Own",
-  "advancements.goety.crafttotem.description": "Craft a Totem of Souls.",
   "advancements.goety.craftinfuser.title": "Cursed Elements",
   "advancements.goety.craftinfuser.description": "Put it on a Spawner to make it work.",
+  "advancements.goety.craftmagicemerald.title": "Secrets Of The Illagers",
+  "advancements.goety.craftmagicemerald.description": "Looks like there's something more to Emeralds than previously thought...",
+  "advancements.goety.crafttotem.title": "Make Your Own",
+  "advancements.goety.crafttotem.description": "Craft a Totem of Souls.",
   "advancements.goety.craftcursedingot.title": "Profaned Metal",
   "advancements.goety.craftcursedingot.description": "Seems to be what Spawners are made of.",
   "advancements.goety.craftemptycore.title": "What Is This, Thaumcraft?",
