Fix Fanatic Crash and getting started on different Crafting methods.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -6,6 +6,7 @@
   "entity.goety.fanatic":"Fanatic",
   "entity.goety.zealot":"Zealot",
   "entity.goety.thug":"Thug",
+  "entity.goety.crimson_spider":"Crimson Spider",
   "entity.goety.disciple":"Disciple",
   "entity.goety.apostle":"Apostle",
   "entity.goety.zombievillagerminion":"Zombie Villager Minion",
@@ -45,6 +46,7 @@
   "item.goety.fanatic_spawn_egg": "Fanatic Spawn Egg",
   "item.goety.zealot_spawn_egg": "Zealot Spawn Egg",
   "item.goety.thug_spawn_egg": "Thug Spawn Egg",
+  "item.goety.crimson_spider_spawn_egg": "Crimson Spider Spawn Egg",
   "item.goety.disciple_spawn_egg": "Disciple Spawn Egg",
   "item.goety.apostle_spawn_egg": "Apostle Spawn Egg",
   "item.goety.envioker_spawn_egg": "Envioker Spawn Egg",
@@ -129,6 +131,7 @@
   "item.goety.temptingfocus": "Tempting Focus",
   "item.goety.dragonfireballfocus": "Dragon's Wrath Focus",
   "item.goety.creeperlingfocus": "Creeping Crawlies Focus",
+  "item.goety.breathfocus": "Breath Focus",
   "item.goety.mutatedsteak": "Mutated Steak",
   "item.goety.mutatedsteak_uncooked": "Mutated Raw Beef",
   "item.goety.mutatedchicken": "Mutated Roasted Chicken",
@@ -166,6 +169,7 @@
   "block.goety.obelisk": "Dark Obelisk",
   "block.goety.guardian_obelisk": "Guarding Obelisk",
   "block.goety.cursed_burner": "Cursed Infuser",
+  "block.goety.dark_altar": "Dark Altar",
   "effect.goety.cursed": "Cursed",
   "effect.goety.deathprotect": "Death Save",
   "effect.goety.souldrain": "Soul Drain",
