Implemented Dark Altar. Moved ModTileEntityType to init folder.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -117,6 +117,7 @@
   "item.goety.focusbag": "Focus Bag",
   "item.goety.emptycore": "Empty Focus",
   "item.goety.airycore": "Airy Focus",
+  "item.goety.animaliscore": "Animalis Focus",
   "item.goety.vexingfocus": "Vexing Focus",
   "item.goety.bitingfocus": "Biting Focus",
   "item.goety.roaringfocus": "Roaring Focus",
@@ -146,6 +147,8 @@
   "item.goety.magicfabric": "Magic Fabric",
   "item.goety.darkbook": "Liber Barathrum",
   "item.goety.deadbat": "Carrion Bat",
+  "item.goety.scrying_mirror": "Scrying Mirror",
+  "item.goety.treasure_pouch": "Treasure Pouch",
   "block.goety.blazecoreblock": "Tank Core",
   "block.goety.cursed_block": "Block of Cursed Metal",
   "block.goety.cursed_stone": "Cursed Stone",
@@ -170,6 +173,8 @@
   "block.goety.guardian_obelisk": "Guarding Obelisk",
   "block.goety.cursed_burner": "Cursed Infuser",
   "block.goety.dark_altar": "Dark Altar",
+  "block.goety.pedestal": "Pedestal",
+  "block.goety.cultist_banner": "Cult Banner",
   "effect.goety.cursed": "Cursed",
   "effect.goety.deathprotect": "Death Save",
   "effect.goety.souldrain": "Soul Drain",
@@ -180,7 +185,7 @@
   "effect.goety.illague": "Illague",
   "effect.goety.necropower": "Necro Power",
   "effect.goety.launch": "Launch",
-  "effect.goety.nomine": "Tfarcenim",
+  "effect.goety.nomine": "Anti Stone Break",
   "key.goety.category": "Goety",
   "key.goety.wand": "Open Wand Focus Slot",
   "key.goety.wandandbag": "Open Bag with Wand",
@@ -192,6 +197,7 @@
   "info.goety.soulitems.cost": "\u00A73Soul Cost: %d\u00A73",
   "info.goety.soulitems.focus": "\u00A7dFocus:\u00A7d %d",
   "info.goety.soulitems.focuscost": "\u00A7bOriginal Cost: %d\u00A7b",
+  "info.goety.infamy.amount": "You have %d Infamy amongst the Illagers",
   "container.goety.soulforge": "Soul Forge",
   "enchantment.goety.souleater": "Soul Eater",
   "advancements.goety.root.title": "Goety",
@@ -227,5 +233,8 @@
   "commands.summonnoai.failed.uuid": "Unable to summon entity due to duplicate UUIDs",
   "commands.summonnoai.invalidPosition": "Invalid position for summon",
   "gui.jei.category.cursed_burner": "Cursed Infuser",
-  "gui.jei.category.cursed_burner.time": "%ss"
+  "gui.jei.category.cursed_burner.time": "%ss",
+  "gui.jei.category.dark_altar": "Cursed Infuser",
+  "gui.jei.category.dark_altar.time": "%ss",
+  "gui.jei.category.dark_altar.soulcost": "%s Souls/s"
 }
