--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -14,6 +14,7 @@
   "entity.goety.envioker":"Envioker",
   "entity.goety.inquillager":"Inquillager",
   "entity.goety.conquillager":"Conquillager",
+  "entity.goety.tormentor":"Tormentor",
   "entity.goety.huskarl":"Huskarl",
   "entity.goety.mutatedcow":"Mutated Cow",
   "entity.goety.mutatedchicken":"Mutated Chicken",
@@ -52,6 +53,7 @@
   "item.goety.envioker_spawn_egg": "Envioker Spawn Egg",
   "item.goety.inquillager_spawn_egg": "Inquillager Spawn Egg",
   "item.goety.conquillager_spawn_egg": "Conquillager Spawn Egg",
+  "item.goety.tormentor_spawn_egg": "Tormentor Spawn Egg",
   "item.goety.huskarl_spawn_egg": "Huskarl Spawn Egg",
   "item.goety.sacredfish_spawn_egg": "Golden King Spawn Egg",
   "item.goety.parasite_spawn_egg": "Parasite Spawn Egg",
