Learned how to implement Custom Sounds.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -1,4 +1,34 @@
 {
+  "name.goety.apostle.0" : "Leprosy",
+  "name.goety.apostle.1" : "Nosghoul",
+  "name.goety.apostle.2" : "Javan Mal",
+  "name.goety.apostle.3" : "Van Dose",
+  "name.goety.apostle.4" : "Finbar",
+  "name.goety.apostle.5" : "Avageleon",
+  "name.goety.apostle.6" : "Ur-Tsar",
+  "name.goety.apostle.7" : "Shorun",
+  "name.goety.apostle.8" : "Gan'Dak",
+  "name.goety.apostle.9" : "Malghash",
+  "name.goety.apostle.10" : "Luther",
+  "name.goety.apostle.11" : "Vexx Mock",
+  "name.goety.apostle.12" : "Krosen",
+  "name.goety.apostle.13" : "Blackmire",
+  "name.goety.apostle.14" : "Maggard",
+  "name.goety.apostle.15" : "Selaphent",
+  "name.goety.apostle.16" : "Indearium",
+  "name.goety.apostle.17" : "Salahmon",
+  "title.goety.0" : "Risen",
+  "title.goety.1" : "Abhorrent",
+  "title.goety.2" : "Defiler",
+  "title.goety.3" : "Dark",
+  "title.goety.4" : "Great Shadow",
+  "title.goety.5" : "Witch King",
+  "title.goety.6" : "Pyre Lord",
+  "title.goety.7" : "Profane",
+  "title.goety.8" : "Cruel",
+  "title.goety.9" : "Terrible",
+  "title.goety.10" : "Glorious",
+  "title.goety.11" : "Accursed",
   "desc.goety.info.focusbag.focus": "Focus",
   "entity.goety.tank":"Tank",
   "entity.goety.friendtank":"Tank",
@@ -147,7 +177,7 @@
   "item.goety.mutatedrabbit_uncooked": "Mutated Raw Rabbit",
   "item.goety.darkfabric": "Dark Fabric",
   "item.goety.magicfabric": "Magic Fabric",
-  "item.goety.darkbook": "Liber Barathrum",
+  "item.goety.nether_book": "Liber Barathrum",
   "item.goety.deadbat": "Carrion Bat",
   "item.goety.scrying_mirror": "Scrying Mirror",
   "item.goety.treasure_pouch": "Treasure Pouch",
@@ -219,6 +249,13 @@
   "info.goety.soulitems.focus": "\u00A7dFocus:\u00A7d %d",
   "info.goety.soulitems.focuscost": "\u00A7bOriginal Cost: %d\u00A7b",
   "info.goety.infamy.amount": "You have %d Infamy amongst the Illagers",
+  "subtitle.goety.apostle_ambient": "Apostle mutters",
+  "subtitle.goety.apostle_hurt": "Apostle hurts",
+  "subtitle.goety.apostle_prepare_spell": "Apostle blasphemies",
+  "subtitle.goety.apostle_prepare_summon": "Apostle calls forth",
+  "subtitle.goety.apostle_cast_spell": "Apostle casts spell",
+  "subtitle.goety.apostle_death": "Apostle perishes",
+  "subtitle.goety.roar_spell": "Loud Roar",
   "container.goety.soulforge": "Soul Forge",
   "enchantment.goety.souleater": "Soul Eater",
   "advancements.goety.root.title": "Goety",
@@ -266,6 +303,7 @@
   "jei.goety.craftType.animalis": "Ritual Type: Animalis",
   "jei.goety.craftType.necroturgy": "Ritual Type: Necroturgy",
   "jei.goety.craftType.minor_nether": "Ritual Type: Minor Nether",
+  "jei.goety.craftType.forge": "Ritual Type: Forge",
   "jei.goety.error.missing_id": "Cannot identify recipe.",
   "jei.goety.error.invalid_type": "Invalid recipe type.",
   "jei.goety.error.recipe_too_large": "Recipe larger than 3x3.",
