Changed some textures, preparing for Summoning Rituals.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "biome.goety.the_dark_lands": "The Dark Lands",
   "name.goety.apostle.0" : "Leprosy",
   "name.goety.apostle.1" : "Nosghoul",
   "name.goety.apostle.2" : "Javan Mal",
