Liber Barathrum is now useful, finally. More Lore!

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -163,9 +163,11 @@
   "item.goety.soulskullfocus": "Soul Skull Focus",
   "item.goety.feastfocus": "Feasting Focus",
   "item.goety.temptingfocus": "Tempting Focus",
-  "item.goety.dragonfireballfocus": "Dragon's Wrath Focus",
+  "item.goety.dragonballfocus": "Dragon's Wrath Focus",
   "item.goety.creeperlingfocus": "Creeping Crawlies Focus",
   "item.goety.breathfocus": "Breath Focus",
+  "item.goety.fireballfocus": "Fireball Focus",
+  "item.goety.lavaballfocus": "Lava Bomb Focus",
   "item.goety.mutatedsteak": "Mutated Steak",
   "item.goety.mutatedsteak_uncooked": "Mutated Raw Beef",
   "item.goety.mutatedchicken": "Mutated Roasted Chicken",
@@ -179,6 +181,7 @@
   "item.goety.darkfabric": "Dark Fabric",
   "item.goety.magicfabric": "Magic Fabric",
   "item.goety.nether_book": "Liber Barathrum",
+  "item.goety.nether_book_translated": "Liber Barathrum - Translated",
   "item.goety.deadbat": "Carrion Bat",
   "item.goety.scrying_mirror": "Scrying Mirror",
   "item.goety.treasure_pouch": "Treasure Pouch",
@@ -250,6 +253,8 @@
   "info.goety.soulitems.focus": "\u00A7dFocus:\u00A7d %d",
   "info.goety.soulitems.focuscost": "\u00A7bOriginal Cost: %d\u00A7b",
   "info.goety.infamy.amount": "You have %d Infamy amongst the Illagers",
+  "info.goety.research.nether": "You have transcribed the book of the Cultists!",
+  "info.goety.ritual.fail": "You do not know how to properly start this ritual!",
   "subtitle.goety.apostle_ambient": "Apostle mutters",
   "subtitle.goety.apostle_hurt": "Apostle hurts",
   "subtitle.goety.apostle_prepare_spell": "Apostle blasphemies",
@@ -305,6 +310,7 @@
   "jei.goety.craftType.necroturgy": "Ritual Type: Necroturgy",
   "jei.goety.craftType.minor_nether": "Ritual Type: Minor Nether",
   "jei.goety.craftType.forge": "Ritual Type: Forge",
+  "jei.goety.craftType.adept_nether": "Ritual Type: Adept Nether",
   "jei.goety.error.missing_id": "Cannot identify recipe.",
   "jei.goety.error.invalid_type": "Invalid recipe type.",
   "jei.goety.error.recipe_too_large": "Recipe larger than 3x3.",
