Trying out Lichdom. Moved Effects to its own Class.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -72,7 +72,10 @@
   "entity.goety.scorchball":"Nether Meteor",
   "entity.goety.soulskull":"Soul Skull",
   "entity.goety.witchgale":"Witch's Gale",
+  "entity.goety.fire_tornado":"Flaming Tornado",
   "entity.goety.lightningtrap":"Lightning Trap",
+  "entity.goety.fireraintrap":"Fire Rain Trap",
+  "entity.goety.stormutil":"Thunderstorm",
   "itemGroup.goetyTab": "Goety",
   "item.goety.channeller_spawn_egg": "Channeller Spawn Egg",
   "item.goety.fanatic_spawn_egg": "Fanatic Spawn Egg",
@@ -186,6 +189,8 @@
   "item.goety.scrying_mirror": "Scrying Mirror",
   "item.goety.treasure_pouch": "Treasure Pouch",
   "item.goety.pedestal_dummy": "Pedestal",
+  "item.goety.apostle_blood_bottle": "Unholy Blood",
+  "item.goety.undeath_potion": "Potion of Transformation",
   "block.goety.blazecoreblock": "Tank Core",
   "block.goety.cursed_block": "Block of Cursed Metal",
   "block.goety.cursed_stone": "Cursed Stone",
@@ -241,6 +246,7 @@
   "effect.goety.necropower": "Necro Power",
   "effect.goety.launch": "Launch",
   "effect.goety.nomine": "Anti Stone Break",
+  "effect.goety.apostle_curse": "Burn Hex",
   "key.goety.category": "Goety",
   "key.goety.wand": "Open Wand Focus Slot",
   "key.goety.wandandbag": "Open Bag with Wand",
@@ -254,7 +260,10 @@
   "info.goety.soulitems.focuscost": "\u00A7bOriginal Cost: %d\u00A7b",
   "info.goety.infamy.amount": "You have %d Infamy amongst the Illagers",
   "info.goety.research.nether": "You have transcribed the book of the Cultists!",
+  "info.goety.ritual.villager": "Villager",
   "info.goety.ritual.fail": "You do not know how to properly start this ritual!",
+  "info.goety.lichdom.success": "You have ascended your mortal coil!",
+  "info.goety.lichdom.fail": "You didn't drink the potion at the right time!",
   "subtitle.goety.apostle_ambient": "Apostle mutters",
   "subtitle.goety.apostle_hurt": "Apostle hurts",
   "subtitle.goety.apostle_prepare_spell": "Apostle blasphemies",
@@ -311,6 +320,7 @@
   "jei.goety.craftType.minor_nether": "Ritual Type: Minor Nether",
   "jei.goety.craftType.forge": "Ritual Type: Forge",
   "jei.goety.craftType.adept_nether": "Ritual Type: Adept Nether",
+  "jei.goety.craftType.sabbath": "Ritual Type: Sabbath",
   "jei.goety.error.missing_id": "Cannot identify recipe.",
   "jei.goety.error.invalid_type": "Invalid recipe type.",
   "jei.goety.error.recipe_too_large": "Recipe larger than 3x3.",
