Trying out how to improve Spells. Need to stop using Skeleton Skulls in Recipes.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -71,6 +71,7 @@
   "entity.goety.pitchfork":"Pitchfork",
   "entity.goety.scorchball":"Nether Meteor",
   "entity.goety.soulskull":"Soul Skull",
+  "entity.goety.fang":"Magic Fang",
   "entity.goety.witchgale":"Witch's Gale",
   "entity.goety.fire_tornado":"Flaming Tornado",
   "entity.goety.lightningtrap":"Lightning Trap",
@@ -262,6 +263,8 @@
   "info.goety.research.nether": "You have transcribed the book of the Cultists!",
   "info.goety.ritual.villager": "Villager",
   "info.goety.ritual.fail": "You do not know how to properly start this ritual!",
+  "info.goety.minion.wander": "%s is now Wandering",
+  "info.goety.minion.follow": "%s is now Following",
   "info.goety.lichdom.success": "You have ascended your mortal coil!",
   "info.goety.lichdom.fail": "You didn't drink the potion at the right time!",
   "subtitle.goety.apostle_ambient": "Apostle mutters",
