Added Emerald Amulet. Made Apostle less sustainable to Soul Skull Spams.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -192,6 +192,7 @@
   "item.goety.pedestal_dummy": "Pedestal",
   "item.goety.apostle_blood_bottle": "Unholy Blood",
   "item.goety.undeath_potion": "Potion of Transformation",
+  "item.goety.emerald_amulet": "Emerald Amulet",
   "block.goety.blazecoreblock": "Tank Core",
   "block.goety.cursed_block": "Block of Cursed Metal",
   "block.goety.cursed_stone": "Cursed Stone",
@@ -248,6 +249,7 @@
   "effect.goety.launch": "Launch",
   "effect.goety.nomine": "Anti Stone Break",
   "effect.goety.apostle_curse": "Burn Hex",
+  "effect.goety.soul_shield": "Soul Shield",
   "key.goety.category": "Goety",
   "key.goety.wand": "Open Wand Focus Slot",
   "key.goety.wandandbag": "Open Bag with Wand",
