--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -47,6 +47,7 @@
   "entity.goety.conquillager":"Conquillager",
   "entity.goety.tormentor":"Tormentor",
   "entity.goety.huskarl":"Huskarl",
+  "entity.goety.boomer":"Boomer",
   "entity.goety.mutatedcow":"Mutated Cow",
   "entity.goety.mutatedchicken":"Mutated Chicken",
   "entity.goety.mutatedsheep":"Mutated Sheep",
@@ -90,6 +91,7 @@
   "item.goety.conquillager_spawn_egg": "Conquillager Spawn Egg",
   "item.goety.tormentor_spawn_egg": "Tormentor Spawn Egg",
   "item.goety.huskarl_spawn_egg": "Huskarl Spawn Egg",
+  "item.goety.boomer_spawn_egg": "Boomer Spawn Egg",
   "item.goety.sacredfish_spawn_egg": "Golden King Spawn Egg",
   "item.goety.parasite_spawn_egg": "Parasite Spawn Egg",
   "item.goety.tank_spawn_egg": "Tank Spawn Egg",
@@ -310,6 +312,12 @@
   "commands.summonnoai.failed": "Unable to summon entity",
   "commands.summonnoai.failed.uuid": "Unable to summon entity due to duplicate UUIDs",
   "commands.summonnoai.invalidPosition": "Invalid position for summon",
+  "commands.lich.query.true": "%s is a Lich",
+  "commands.lich.query.false": "%s is not a Lich",
+  "commands.lich.turnlich.success": "%s has been granted Lichdom!",
+  "commands.lich.turnlich.failed": "%s is already a Lich!",
+  "commands.lich.delich.success": "%s is no longer a Lich!",
+  "commands.lich.delich.failed": "%s is already not a Lich!",
   "gui.jei.category.cursed_burner": "Cursed Infuser",
   "gui.jei.category.cursed_burner.time": "%ss",
   "gui.jei.category.dark_altar": "Cursed Infuser",
