--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -48,6 +48,7 @@
   "entity.goety.tormentor":"Tormentor",
   "entity.goety.huskarl":"Huskarl",
   "entity.goety.boomer":"Boomer",
+  "entity.goety.dune_spider":"Dune Spider",
   "entity.goety.mutatedcow":"Mutated Cow",
   "entity.goety.mutatedchicken":"Mutated Chicken",
   "entity.goety.mutatedsheep":"Mutated Sheep",
@@ -93,6 +94,7 @@
   "item.goety.tormentor_spawn_egg": "Tormentor Spawn Egg",
   "item.goety.huskarl_spawn_egg": "Huskarl Spawn Egg",
   "item.goety.boomer_spawn_egg": "Boomer Spawn Egg",
+  "item.goety.dune_spider_spawn_egg": "Dune Spider Spawn Egg",
   "item.goety.sacredfish_spawn_egg": "Golden King Spawn Egg",
   "item.goety.parasite_spawn_egg": "Parasite Spawn Egg",
   "item.goety.tank_spawn_egg": "Tank Spawn Egg",
@@ -250,6 +252,7 @@
   "block.goety.stripped_haunted_log": "Stripped Haunted Log",
   "block.goety.stripped_haunted_wood": "Stripped Haunted Wood",
   "block.goety.temp_web": "Magic Cobweb",
+  "block.goety.dark_cloud": "Dark Cloud",
   "block.goety.cultist_banner": "Cult Banner",
   "effect.goety.cursed": "Cursed",
   "effect.goety.deathprotect": "Death Save",
