Liches are more Lichier. Some extra files are there due to Experimentation.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -60,6 +60,7 @@
   "entity.goety.friendly_scorch":"Scorch",
   "entity.goety.zombie_minion":"Zombie Servant",
   "entity.goety.skeleton_minion":"Skeleton Servant",
+  "entity.goety.illusion_clone":"Doppelganger",
   "entity.goety.spiderling_minion":"Spiderling",
   "entity.goety.creeperling_minion":"Creeperling",
   "entity.goety.tamed_spider":"Loyal Spider",
@@ -73,6 +74,7 @@
   "entity.goety.pitchfork":"Pitchfork",
   "entity.goety.scorchball":"Nether Meteor",
   "entity.goety.soulskull":"Soul Skull",
+  "entity.goety.soul_bullet":"Soul Bullet",
   "entity.goety.web_ball":"Ball of Webs",
   "entity.goety.fang":"Magic Fang",
   "entity.goety.witchgale":"Witch's Gale",
@@ -178,6 +180,7 @@
   "item.goety.fireballfocus": "Fireball Focus",
   "item.goety.lavaballfocus": "Lava Bomb Focus",
   "item.goety.webballfocus": "Web Ball Focus",
+  "item.goety.illusionfocus": "Mirror Focus",
   "item.goety.mutatedsteak": "Mutated Steak",
   "item.goety.mutatedsteak_uncooked": "Mutated Raw Beef",
   "item.goety.mutatedchicken": "Mutated Roasted Chicken",
@@ -253,6 +256,7 @@
   "block.goety.stripped_haunted_wood": "Stripped Haunted Wood",
   "block.goety.temp_web": "Magic Cobweb",
   "block.goety.dark_cloud": "Dark Cloud",
+  "block.goety.arca": "Arca",
   "block.goety.cultist_banner": "Cult Banner",
   "effect.goety.cursed": "Cursed",
   "effect.goety.deathprotect": "Death Save",
@@ -285,7 +289,7 @@
   "info.goety.minion.wander": "%s is now Wandering",
   "info.goety.minion.follow": "%s is now Following",
   "info.goety.lichdom.success": "You have ascended your mortal coil!",
-  "info.goety.lichdom.fail": "You didn't drink the potion at the right time!",
+  "info.goety.lichdom.fail": "You didn't prepare yourself properly to drink the potion!",
   "subtitle.goety.apostle_ambient": "Apostle mutters",
   "subtitle.goety.apostle_hurt": "Apostle hurts",
   "subtitle.goety.apostle_prepare_spell": "Apostle blasphemies",
@@ -349,6 +353,7 @@
   "jei.goety.craftType.forge": "Ritual Type: Forge",
   "jei.goety.craftType.adept_nether": "Ritual Type: Adept Nether",
   "jei.goety.craftType.sabbath": "Ritual Type: Sabbath",
+  "jei.goety.craftType.air": "Ritual Type: Air",
   "jei.goety.error.missing_id": "Cannot identify recipe.",
   "jei.goety.error.invalid_type": "Invalid recipe type.",
   "jei.goety.error.recipe_too_large": "Recipe larger than 3x3.",
