Made Dark Manor use Salvaged Fort Structure generation codes. Illague Event changed to be more like Spawner Events.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -274,6 +274,7 @@
   "key.goety.category": "Goety",
   "key.goety.wand": "Open Wand Focus Slot",
   "key.goety.wandandbag": "Open Bag with Wand",
+  "key.goety.bag": "Open Focus Bag",
   "text.goety.swap": "Swap",
   "text.goety.insert": "Insert",
   "text.goety.extract": "Remove",
