Removed unused Soul Forge assets.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -225,6 +225,7 @@
   "block.goety.obelisk": "Dark Obelisk",
   "block.goety.guardian_obelisk": "Guarding Obelisk",
   "block.goety.cursed_burner": "Cursed Infuser",
+  "block.goety.cursed_kiln": "Soul Kiln",
   "block.goety.dark_altar": "Dark Altar",
   "block.goety.pedestal": "Pedestal",
   "block.goety.dead_sand": "Dead Sand",
