Fix the Ritual Result Item not removing. Wondering why Zombies/Skeleton Servants don't update their equipment when playing with other mods.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -82,6 +82,7 @@
   "entity.goety.lightningtrap":"Lightning Trap",
   "entity.goety.fireraintrap":"Fire Rain Trap",
   "entity.goety.stormutil":"Thunderstorm",
+  "entity.goety.summon_apostle":"Apostle",
   "itemGroup.goetyTab": "Goety",
   "item.goety.channeller_spawn_egg": "Channeller Spawn Egg",
   "item.goety.fanatic_spawn_egg": "Fanatic Spawn Egg",
@@ -292,6 +293,7 @@
   "info.goety.minion.follow": "%s is now Following",
   "info.goety.lichdom.success": "You have ascended your mortal coil!",
   "info.goety.lichdom.fail": "You didn't prepare yourself properly to drink the potion!",
+  "info.goety.apostle.summon": "A dark presence is approaching...",
   "subtitle.goety.apostle_ambient": "Apostle mutters",
   "subtitle.goety.apostle_hurt": "Apostle hurts",
   "subtitle.goety.apostle_prepare_spell": "Apostle blasphemies",
