Properly added Arca and found the way to fix that Equipment problems with Undead Servants.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -203,6 +203,7 @@
   "item.goety.apostle_blood_bottle": "Unholy Blood",
   "item.goety.undeath_potion": "Potion of Transformation",
   "item.goety.emerald_amulet": "Emerald Amulet",
+  "item.goety.soul_transfer": "Transfer Gem",
   "block.goety.blazecoreblock": "Tank Core",
   "block.goety.cursed_block": "Block of Cursed Metal",
   "block.goety.cursed_stone": "Cursed Stone",
@@ -277,6 +278,7 @@
   "key.goety.wand": "Open Wand Focus Slot",
   "key.goety.wandandbag": "Open Bag with Wand",
   "key.goety.bag": "Open Focus Bag",
+  "key.goety.teleport": "Teleport",
   "text.goety.swap": "Swap",
   "text.goety.insert": "Insert",
   "text.goety.extract": "Remove",
@@ -293,7 +295,12 @@
   "info.goety.minion.follow": "%s is now Following",
   "info.goety.lichdom.success": "You have ascended your mortal coil!",
   "info.goety.lichdom.fail": "You didn't prepare yourself properly to drink the potion!",
-  "info.goety.apostle.summon": "A dark presence is approaching...",
+  "info.goety.apostle.summon": "A dark presence washes over you...",
+  "tooltip.goety.arca": "Arca location: ",
+  "tooltip.goety.arcaX": "X: ",
+  "tooltip.goety.arcaY": "Y: ",
+  "tooltip.goety.arcaZ": "Z: ",
+  "tooltip.goety.arca_not_bound": "Has yet to be bound to an Arca.",
   "subtitle.goety.apostle_ambient": "Apostle mutters",
   "subtitle.goety.apostle_hurt": "Apostle hurts",
   "subtitle.goety.apostle_prepare_spell": "Apostle blasphemies",
