Added new Ritual Type and finally implemented Soul Shield Spell.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -186,6 +186,7 @@
   "item.goety.lavaballfocus": "Lava Bomb Focus",
   "item.goety.webballfocus": "Web Ball Focus",
   "item.goety.illusionfocus": "Mirror Focus",
+  "item.goety.soulshieldfocus": "Soul Shield Focus",
   "item.goety.mutatedsteak": "Mutated Steak",
   "item.goety.mutatedsteak_uncooked": "Mutated Raw Beef",
   "item.goety.mutatedchicken": "Mutated Roasted Chicken",
@@ -370,6 +371,7 @@
   "jei.goety.craftType.necroturgy": "Ritual Type: Necroturgy",
   "jei.goety.craftType.minor_nether": "Ritual Type: Minor Nether",
   "jei.goety.craftType.forge": "Ritual Type: Forge",
+  "jei.goety.craftType.magic": "Ritual Type: Magic",
   "jei.goety.craftType.adept_nether": "Ritual Type: Adept Nether",
   "jei.goety.craftType.expert_nether": "Ritual Type: Expert Nether",
   "jei.goety.craftType.sabbath": "Ritual Type: Sabbath",
