Added Spider Levels, replaced Web Ball Spell and cleaned up some codes.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -78,7 +78,7 @@
   "entity.goety.scorchball":"Nether Meteor",
   "entity.goety.soulskull":"Soul Skull",
   "entity.goety.soul_bullet":"Soul Bullet",
-  "entity.goety.web_ball":"Ball of Webs",
+  "entity.goety.poison_ball":"Poison Ball",
   "entity.goety.fang":"Magic Fang",
   "entity.goety.witchgale":"Witch's Gale",
   "entity.goety.fire_tornado":"Flaming Tornado",
@@ -181,12 +181,13 @@
   "item.goety.temptingfocus": "Tempting Focus",
   "item.goety.dragonballfocus": "Dragon's Wrath Focus",
   "item.goety.creeperlingfocus": "Creeping Crawlies Focus",
-  "item.goety.breathfocus": "Breath Focus",
+  "item.goety.airbreathfocus": "Breath Focus",
   "item.goety.fireballfocus": "Fireball Focus",
   "item.goety.lavaballfocus": "Lava Bomb Focus",
-  "item.goety.webballfocus": "Web Ball Focus",
+  "item.goety.poisonballfocus": "Poison Ball Focus",
   "item.goety.illusionfocus": "Mirror Focus",
   "item.goety.soulshieldfocus": "Soul Shield Focus",
+  "item.goety.firebreathfocus": "Fire Breath Focus",
   "item.goety.mutatedsteak": "Mutated Steak",
   "item.goety.mutatedsteak_uncooked": "Mutated Raw Beef",
   "item.goety.mutatedchicken": "Mutated Roasted Chicken",
@@ -231,6 +232,7 @@
   "block.goety.mutation_totem": "Eldritch Totem Head",
   "block.goety.undead_totem": "Necrotic Totem Head",
   "block.goety.wind_totem": "Galeful Totem Head",
+  "block.goety.soul_fang_totem": "Soul Eating Totem Head",
   "block.goety.obelisk": "Dark Obelisk",
   "block.goety.guardian_obelisk": "Guarding Obelisk",
   "block.goety.cursed_burner": "Cursed Infuser",
