--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -211,6 +211,7 @@
   "item.goety.undeath_potion": "Potion of Transformation",
   "item.goety.emerald_amulet": "Emerald Amulet",
   "item.goety.vampiric_amulet": "Vampiric Amulet",
+  "item.goety.skull_amulet": "Skull Amulet",
   "item.goety.ring_of_want_1": "Ring of Want I",
   "item.goety.ring_of_want_2": "Ring of Want II",
   "item.goety.ring_of_want_3": "Ring of Want III",
