Fixed Skull Amulet not properly implemented. Added Soul Lights WIP.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -279,6 +279,7 @@
   "block.goety.temp_web": "Magic Cobweb",
   "block.goety.dark_cloud": "Dark Cloud",
   "block.goety.arca": "Arca",
+  "block.goety.soul_light": "Soul Light",
   "block.goety.cultist_banner": "Cult Banner",
   "effect.goety.cursed": "Cursed",
   "effect.goety.deathprotect": "Death Save",
