Properly implemented Soul Light. SoulLightEntity projectile code based off Ars Nouveau.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -79,6 +79,7 @@
   "entity.goety.scorchball":"Nether Meteor",
   "entity.goety.soulskull":"Soul Skull",
   "entity.goety.soul_bullet":"Soul Bullet",
+  "entity.goety.soul_light":"Soul Light",
   "entity.goety.poison_ball":"Poison Ball",
   "entity.goety.fang":"Magic Fang",
   "entity.goety.witchgale":"Witch's Gale",
@@ -189,6 +190,7 @@
   "item.goety.illusionfocus": "Mirror Focus",
   "item.goety.soulshieldfocus": "Soul Shield Focus",
   "item.goety.firebreathfocus": "Fire Breath Focus",
+  "item.goety.soullightfocus": "Soul Light Focus",
   "item.goety.mutatedsteak": "Mutated Steak",
   "item.goety.mutatedsteak_uncooked": "Mutated Raw Beef",
   "item.goety.mutatedchicken": "Mutated Roasted Chicken",
@@ -212,9 +214,7 @@
   "item.goety.emerald_amulet": "Emerald Amulet",
   "item.goety.vampiric_amulet": "Vampiric Amulet",
   "item.goety.skull_amulet": "Skull Amulet",
-  "item.goety.ring_of_want_1": "Ring of Want I",
-  "item.goety.ring_of_want_2": "Ring of Want II",
-  "item.goety.ring_of_want_3": "Ring of Want III",
+  "item.goety.ring_of_want": "Ring of Want",
   "item.goety.brain": "Brain",
   "item.goety.soul_transfer": "Transfer Gem",
   "item.goety.haunted_boat": "Haunted Boat",
@@ -231,6 +231,7 @@
   "block.goety.cursed_bricks_slab": "Cursed Bricks Slab",
   "block.goety.cursed_bricks_stairs": "Cursed Bricks Stairs",
   "block.goety.cursed_bricks_wall": "Cursed Bricks Wall",
+  "block.goety.grave_bricks_wall": "Cursed Bricks Wall",
   "block.goety.cursed_stone_chiseled": "Chiseled Cursed Stone",
   "block.goety.cursed_tiles": "Cursed Tiles",
   "block.goety.cursed_tiles_slab": "Cursed Tiles Slab",
@@ -332,6 +333,7 @@
   "subtitle.goety.roar_spell": "Loud Roar",
   "container.goety.soulforge": "Soul Forge",
   "enchantment.goety.souleater": "Soul Eater",
+  "enchantment.goety.wanting": "Wanting",
   "advancements.goety.root.title": "Goety",
   "advancements.goety.root.description": "Get started on your journey",
   "advancements.goety.craftinfuser.title": "Cursed Elements",
@@ -397,5 +399,7 @@
   "item.goety.jei_dummy.item": "Requires Item Use!",
   "item.goety.jei_dummy.item.tooltip": "This ritual requires to use a specific item to start.",
   "item.goety.jei_dummy.none": "Non-Item Ritual Result",
-  "item.goety.jei_dummy.none.tooltip": "This ritual does not create any items."
+  "item.goety.jei_dummy.none.tooltip": "This ritual does not create any items.",
+  "death.attack.fire_breath": "%1$s was reduced to ash by %2$s",
+  "death.attack.fire_breath.item": "%1$s was burned by %2$s using %3$s"
 }
